force-app/main/default/objects/Trades_Daily_Report__c/Trades_Daily_Report__c.object-meta.xml
<CustomObject>
    <label>Trades Daily Report</label>
    <nameField>
        <displayFormat>TRDR-{000}</displayFormat>
        <label>Trades Daily Report</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trades Daily Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>