force-app/main/default/objects/Trades_Daily_Report__c/fields/Current_Report_Date_formula__c.field-meta.xml
<CustomField>
    <fullName>Current_Report_Date_formula__c</fullName>
    <formula>IF( Report_Date__c = TODAY(), TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Report Date</label>
    <type>Checkbox</type>
</CustomField>