force-app/main/default/objects/Trades_Daily_Report__c/fields/Report_Date__c.field-meta.xml
<CustomField>
    <fullName>Report_Date__c</fullName>
    <label>Report Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>