force-app/main/default/objects/Trades_Daily_Report__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Unit</label>
    <referenceTo>Unit__c</referenceTo>
    <relationshipLabel>Trades Daily Reports</relationshipLabel>
    <relationshipName>Trades_Daily_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>