force-app/main/default/objects/Trades_Daily_Report__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Relevant_Department__c</columns>
    <columns>Unit__c</columns>
    <columns>Report_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>